# High_Performance_Homework

./: CMakeLists.txt  README.md
exp_1/: report.md  实验要求.txt
exp_1/high_perfom_test/: main.c
exp_2/code/: A1.cpp  A2.cpp  A3.cpp  A4.cpp  choumi.cpp  rewrite.cpp  xishu.cpp
exp_3/: exp_3.cpp
exp_4/: exp_4.cpp
exp_5/: hello-world.cu  matmul.cu
第二次实验/code/: main.cpp  rewrite.cpp  实验3的向量数据.mtx  实验3的矩阵数据.mtx
