cmake_minimum_required(VERSION 3.12)
project(High_Performance_Homework)

set(CMAKE_CXX_STANDARD 14)
include_directories(/share/apps/openmpi/include)
SET(CMAKE_CXX_COMPILER mpicxx)
add_executable(A1 exp_2/code/A1.cpp)
add_executable(A2 exp_2/code/A2.cpp)
add_executable(A3 exp_2/code/A3.cpp)
add_executable(A4 exp_2/code/A4.cpp)